--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "~7.10.0",
     "@babel/plugin-transform-runtime": "~7.10.0",
@@ -91,5 +91,8 @@
     "ttypescript": "~1.5.12",
     "typescript": "~3.9.7",
     "typescript-transform-paths": "~2.0.3"
+  },
+  "dependencies": {
+    "peeler-js": "^0.4.0"
   }
 }
