--- a/packages/mixin-jsbridge-sdk/package.json
+++ b/packages/mixin-jsbridge-sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mixin-jsbridge-sdk",
+  "name": "@foxone/mixin-sdk-jsbridge",
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
@@ -50,7 +50,6 @@
     "@babel/preset-typescript": "~7.10.0",
     "@babel/runtime-corejs3": "~7.10.0",
     "@commitlint/cli": "8.3.5",
-    "@omni-door/cli": "~2.3.3",
     "@rollup/plugin-alias": "~3.1.1",
     "@rollup/plugin-babel": "~5.2.2",
     "@rollup/plugin-commonjs": "~17.0.0",
