--- a/packages/mixin-jsbridge-sdk/package.json
+++ b/packages/mixin-jsbridge-sdk/package.json
@@ -14,8 +14,8 @@
     "test:browser": "karma start --browsers Chrome",
     "lint": "npm run lint:prettier && npm run lint:es",
     "lint:fix": "npm run lint:prettier_fix && npm run lint:es_fix",
-    "lint:es": "eslint src/ --ext .ts --ext .tsx",
-    "lint:es_fix": "eslint src/ --ext .ts --ext .tsx --fix",
+    "lint:es": "eslint src/ --ext .ts",
+    "lint:es_fix": "eslint src/ --ext .ts --fix",
     "lint:prettier": "prettier --check src/",
     "lint:prettier_fix": "prettier --write src/",
     "lint:commit": "commitlint -e $HUSKY_GIT_PARAMS",
