--- a/packages/mixin-jsbridge-sdk/package.json
+++ b/packages/mixin-jsbridge-sdk/package.json
@@ -55,7 +55,9 @@
     "@rollup/plugin-commonjs": "~17.0.0",
     "@rollup/plugin-json": "~4.1.0",
     "@rollup/plugin-node-resolve": "~11.0.0",
+    "@types/base64-js": "^1.3.0",
     "@types/chai": "4.2.9",
+    "@types/crypto-js": "^4.0.1",
     "@types/mocha": "7.0.1",
     "@typescript-eslint/eslint-plugin": "~3.8.0",
     "@typescript-eslint/parser": "~3.8.0",
@@ -93,6 +95,9 @@
     "webpack": "^4.0.0"
   },
   "dependencies": {
+    "ajax-maker": "^0.0.19",
+    "base64-js": "^1.5.1",
+    "crypto-js": "^4.0.0",
     "peeler-js": "^0.4.0"
   }
 }
