--- a/packages/mixin-jsbridge-sdk/package.json
+++ b/packages/mixin-jsbridge-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/mixin-sdk-jsbridge",
-  "version": "0.0.5",
+  "version": "0.1.0-0",
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
