--- a/packages/mixin-jsbridge-sdk/package.json
+++ b/packages/mixin-jsbridge-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/mixin-sdk-jsbridge",
-  "version": "0.1.0-5",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -64,7 +64,7 @@
     "chai": "4.2.0",
     "del": "5.1.0",
     "detect-port": "1.3.0",
-    "dumi": "1.0.35",
+    "dumi": "^1.1.16",
     "eslint": "~7.6.0",
     "eslint-config-prettier": "~6.13.0",
     "eslint-plugin-prettier": "~3.1.4",
