--- a/packages/mixin-jsbridge-demo/package.json
+++ b/packages/mixin-jsbridge-demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixin-jsbridge-rebot",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "scripts": {
     "start": "omni dev",
@@ -31,7 +31,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@foxone/mixin-sdk-jsbridge": "0.1.0-5",
+    "@foxone/mixin-sdk-jsbridge": "0.1.0",
     "core-js": "^3.6.4",
     "element-plus": "^1.0.2-beta.35",
     "regenerator-runtime": "^0.13.5",
