--- a/packages/mixin-jsbridge-sdk/tsconfig.json
+++ b/packages/mixin-jsbridge-sdk/tsconfig.json
@@ -58,6 +58,7 @@
     /* Experimental Options */
     "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "resolveJsonModule": true,
     "plugins": [
       { "transform": "typescript-transform-paths" },
       { "transform": "typescript-transform-paths", "afterDeclarations": true }
