--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - master
 
+    paths:
+      - 'packages/sdk/docs/**'
+      - 'packages/sdk/src/**'
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
