--- a/packages/robot/package.json
+++ b/packages/robot/package.json
@@ -15,7 +15,7 @@
     "lint:style_fix": "stylelint src/**/*.{css,less,scss,sass} --fix --allow-empty-input",
     "new": "omni new",
     "build": "omni build",
-    "release": "omni release"
+    "release": "./script.sh"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +43,7 @@
     "@babel/preset-env": "~7.12.11",
     "@babel/preset-react": "~7.12.10",
     "@babel/preset-typescript": "~7.12.7",
+    "@omni-door/cli": "^2.3.10",
     "@types/vfile-message": "1.0.1",
     "@types/webpack-env": "1.16.0",
     "@typescript-eslint/eslint-plugin": "~4.13.0",
