[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.9

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/mixin-sdk-jsbridge",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -95,10 +95,10 @@
     "webpack": "^4.0.0"
   },
   "dependencies": {
-    "ajax-maker": "^0.0.19",
+    "ajax-maker": "~0.0.20",
     "base64-js": "^1.5.1",
     "crypto-js": "^4.0.0",
-    "peeler-js": "^0.4.0"
+    "peeler-js": "~0.4.2"
   },
   "repository": {
     "type": "git",
