--- a/.github/workflows/cicd-npm.yml
+++ b/.github/workflows/cicd-npm.yml
@@ -42,7 +42,7 @@ jobs:
       uses: JS-DevTools/npm-publish@v1
       with:
         token: ${{ secrets.NPM_TOKEN }}
-        tag: 'latest'
+        tag: 'prepatch'
 
 
 
