[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.13-1

--- a/.github/workflows/cicd-npm.yml
+++ b/.github/workflows/cicd-npm.yml
@@ -42,7 +42,8 @@ jobs:
       uses: JS-DevTools/npm-publish@v1
       with:
         token: ${{ secrets.NPM_TOKEN }}
-        tag: 'prepatch'
+        package: ./packages/sdk/package.json
+        tag: 'prerelease'
 
 
 
