[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.13-2

--- a/packages/sdk/.npmignore
+++ b/packages/sdk/.npmignore
@@ -11,6 +11,7 @@ node_modules
 .omni_cache
 dist
 dist.zip
+docs
 
 # config files
 .eslintignore
@@ -27,7 +28,7 @@ _config.yml
 .travis.yml
 coverage
 .nycrc
-mocha.opts
+mocha.*
 
 yarn.lock
 package-lock.json
