[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.13

--- a/.github/workflows/cicd-npm.yml
+++ b/.github/workflows/cicd-npm.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         token: ${{ secrets.NPM_TOKEN }}
         package: ./packages/sdk/package.json
-        tag: 'prerelease'
+        tag: 'latest'
 
 
 
