[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.4.0-0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,6 @@
     "**/.editorconfig": true,
     "**/.eslintignore": true,
     "**/.prettierignore": true
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
