--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -31,7 +31,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@foxone/mixin-sdk-jsbridge": "^0.3.3",
+    "@foxone/mixin-sdk-jsbridge": "^0.4.0-0",
     "core-js": "^3.6.4",
     "element-plus": "^1.0.2-beta.35",
     "regenerator-runtime": "^0.13.5",
