update: mixin docs url

--- a/.github/workflows/cicd-docs.yml
+++ b/.github/workflows/cicd-docs.yml
@@ -6,6 +6,9 @@ on:
 
     paths:
       - 'packages/sdk/docs/**'
+      - 'packages/sdk/*.md'
+      - '*.md'
+      - 'packages/sdk/.umirc.ts'
 
 jobs:
   build-deploy:
